--- a/android/.gitignore
+++ b/android/.gitignore
@@ -27,6 +27,7 @@ proguard/
 
 # Android Studio Navigation editor temp files
 .navigation/
+.idea/workspace.xml
 
 # Android Studio captures folder
 captures/
